--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="ro">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LucyOFM</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
 <body>
   <div class="container">
     <h1>LucyOFM</h1>
     <form>
-      <input type="text" id="prompt" placeholder="Introdu meciul aici..." />
+      <input type="text" placeholder="Ex: Rapid - FC Botoșani" />
       <button type="submit">Analizează</button>
     </form>
-    <div id="output"></div>
+    <div id="result"></div>
   </div>
   <script src="script.js"></script>
 </body>
-</html>
