--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+  <meta charset="UTF-8">
+  <title>LucyOFM</title>
+</head>
 <body>
-  <div class="container">
-    <h1>LucyOFM</h1>
-    <form>
-      <input type="text" placeholder="Ex: Rapid - FC Botoșani" />
-      <button type="submit">Analizează</button>
-    </form>
-    <div id="result"></div>
-  </div>
+  <h1>LucyOFM</h1>
+  <input type="text" id="matchInput" placeholder="Ex: Rapid - FC Botoșani">
+  <button id="analyzeButton">Analizează</button>
+  <div id="result" style="margin-top:20px;"></div>
+
   <script src="script.js"></script>
 </body>
+</html>
