--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ro">
-<head>
-  <meta charset="UTF-8">
-  <title>LucyOFM</title>
-</head>
-<body>
-  <h1>LucyOFM</h1>
-  <input type="text" id="matchInput" placeholder="Ex: Rapid - FC Botoșani">
-  <button id="analyzeButton">Analizează</button>
-  <div id="result" style="margin-top:20px;"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>LucyOFM</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>LucyOFM</h1>
+    <input type="text" id="matchInput" placeholder="Rapid-FC Botoșani" />
+    <button onclick="analyzeMatch()">Analizează</button>
+    <pre id="result"></pre>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
