--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,18 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <title>LucyOFM Bot – Analize meciuri</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="manifest.json" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LucyOFM BOT</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <div class="container">
-    <h1>LucyOFM 🧠 Analize meciuri</h1>
-    <textarea id="prompt" placeholder="Scrie meciul aici..."></textarea>
-    <button onclick="analizeaza()">Analizează</button>
-    <button onclick="stergeIstoric()" style="background:#ff4444;color:#fff;border:none;padding:6px 12px;border-radius:4px;font-size:12px;margin-top:4px;">🗑️ Șterge istoric</button>
-    <pre id="rezultat">📝 Aici apar cele 10 puncte...</pre>
+    <h1>LucyOFM7474</h1>
+    <textarea id="prompt" placeholder="Scrie cererea ta aici..."></textarea>
+    <input type="text" id="exclude" placeholder="Excluderi: ex. 1,4,7">
+    <button onclick="sendMessage()">Trimite</button>
+    <pre id="response"></pre>
   </div>
   <script src="script.js"></script>
 </body>
