--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
-  <title>LucyOFM MongoDB Bot</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LucyOFM7474 Bot</title>
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Botul LucyOFM este activ cu MongoDB!</h1>
+  <div class="container">
+    <h1>LucyOFM7474</h1>
+    <textarea id="input" placeholder="Scrie întrebarea ta aici..."></textarea>
+    <button onclick="sendMessage()">Trimite</button>
+    <div id="output"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
