--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ro">
-<head> 
+<head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LucyOFM7474 Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LucyOFM Bot</title>
   <link rel="manifest" href="/manifest.json" />
-  <link rel="stylesheet" href="style.css" />
-</head> 
+  <link rel="stylesheet" href="/style.css" />
+</head>
 <body>
   <div class="container">
-    <h1>LucyOFM7474</h1>
-    <textarea id="input" placeholder="Scrie întrebarea ta aici..."></textarea>
+    <h1>LucyOFM Bot 🤖</h1>
+    <textarea id="user-input" placeholder="Scrie o întrebare..." rows="4"></textarea>
     <button onclick="sendMessage()">Trimite</button>
-    <div id="output"></div>
+    <div id="response"></div>
   </div>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
