--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,6 @@
 
       <div class="row">
         <div class="col">
-          <label for="date">Dată (opțional)</label>
-          <input id="date" type="date" />
-        </div>
-        <div class="col">
           <button id="analyzeBtn">Generează analiza</button>
         </div>
       </div>
@@ -42,7 +38,7 @@
     </section>
   </main>
 
-  <footer class="foot">© LucyOFM • build v1</footer>
+  <footer class="foot">© LucyOFM • build v1 (fără dată)</footer>
 
   <script src="/script.js"></script>
 </body>
