--- a/public/index.html
+++ b/public/index.html
@@ -2,38 +2,37 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>LucyOFM – Analize Meciuri</title>
-  <link rel="manifest" href="/manifest.json" />
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>LucyOFM – Analize Meciuri</h1>
-      <div class="tag">GPT-5 • Surse externe • Feedback Mongo</div>
-    </header>
+  <div class="container">
+    <div class="header">LucyOFM – Analize Meciuri</div>
+    <div class="sub">GPT-5 • Surse externe • Feedback Mongo</div>
 
-    <section class="card">
-      <label for="match">Meci <small>(format: Gazdă – Oaspeți)</small></label>
-      <input id="match" type="text" placeholder="FC Copenhaga – Aarhus" />
-      <button id="go">Generează analiza</button>
-      <div class="hint">Structură în 10 puncte + „De jucat”.</div>
-    </section>
-
-    <section class="card">
-      <h3>Rezultat</h3>
-      <textarea id="out" rows="18" readonly></textarea>
-      <div class="actions">
-        <button id="voteUp">👍 Bun</button>
-        <button id="voteDown" class="warn">👎 Slab</button>
+    <div class="panel">
+      <div class="section-title">Meci (format: Gazdă – Oaspeți)</div>
+      <div class="input-row">
+        <input id="matchInput" type="text" placeholder="Ex: Korona Kielce – Radomiak" />
+        <button id="generateBtn" class="btn">Generează analiza</button>
       </div>
-      <div id="status" class="status"></div>
-    </section>
 
-    <footer>
-      <span>Status: Scrie meciul corect. Exemplu: „Korona Kielce – Radomiak”.</span>
-    </footer>
+      <div id="sourcesBar" class="sources"></div>
+
+      <div class="section-title">Structură în 10 puncte + „De jucat”.</div>
+
+      <div class="section-title" style="margin-top:18px;">Rezultat</div>
+      <div id="resultBox">
+        <div class="placeholder">Introduceți meciul și apăsați „Generează analiza”.</div>
+      </div>
+
+      <div class="feedback-row">
+        <button id="fbGood" class="btn btn-secondary">👍 Bun</button>
+        <button id="fbBad" class="btn btn-secondary">👎 Slab</button>
+        <span id="status" class="status"></span>
+      </div>
+    </div>
   </div>
 
   <script src="/script.js"></script>
