--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,7 @@
       <div class="section-title">Structură în 10 puncte + „De jucat”.</div>
 
       <div class="section-title" style="margin-top:18px;">Rezultat</div>
-      <div id="resultBox">
-        <div class="placeholder">Introduceți meciul și apăsați „Generează analiza”.</div>
-      </div>
+      <div id="resultBox"><div class="placeholder">Introduceți meciul și apăsați „Generează analiza”.</div></div>
 
       <div class="feedback-row">
         <button id="fbGood" class="btn btn-secondary">👍 Bun</button>
