--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,108 @@
-<!doctype html>
-<html lang="ro">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LucyOFM – Analize Meciuri</title>
-  <link rel="stylesheet" href="/style.css" />
-  <style>
-    :root { --bg:#0b0d10; --card:#151922; --text:#f2f5f9; --muted:#9aa4b2; --accent:#4da3ff; }
-    body{margin:0;background:var(--bg);color:var(--text);font:15px/1.55 system-ui,-apple-system,Segoe UI,Roboto}
-    .wrap{max-width:860px;margin:0 auto;padding:16px}
-    h1{margin:8px 0 6px;font-size:26px}
-    .card{background:#151922;border:1px solid #1f2532;border-radius:14px;padding:14px;margin:12px 0}
-    label{display:block;margin-bottom:8px;color:var(--muted)}
-    input{width:100%;padding:12px;border-radius:10px;border:1px solid #2a3142;background:#0f141b;color:var(--text)}
-    input:focus{outline:none;border-color:var(--accent)}
-    .row{display:flex;gap:10px;margin-top:12px}
-    button{background:#245eb8;border:1px solid #2b6ad0;color:#fff;padding:10px 16px;border-radius:10px;cursor:pointer}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    pre{white-space:pre-wrap;background:#0f141b;border:1px solid #1f2532;border-radius:10px;padding:12px;min-height:120px;margin:0}
-    .hint{color:var(--muted);font-size:13px;margin-top:6px}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <h1>LucyOFM – Analize Meciuri</h1>
+// api/chat.js (Node 20, ESM). Composează analiza în 10 puncte pe baza extraselor țintite.
+// Evităm API-urile site-urilor: luăm doar fragmentele cu „Pronostic/Pont/Prediction”.
 
-    <section class="card">
-      <label for="query">Meci (un singur câmp):</label>
-      <input id="query" placeholder="Ex.: Oxford – Portsmouth  |  Norwich - Millwall  |  https://www.sportytrader.com/ro/pronosticuri/..." />
-      <div class="hint">Poți scrie „Gazdă – Oaspeți”, un <em>slug</em> sau chiar URL-ul direct de SportyTrader.</div>
-      <div class="row">
-        <button id="btnGenerate">Generează analiza</button>
-      </div>
-    </section>
+import OpenAI from "openai";
+import { collectSources } from "./extractors.js";
 
-    <section class="card">
-      <h2>Structură în 10 puncte – „De jucat”.</h2>
-      <pre id="resultBox">Nicio analiză încă.</pre>
-      <div class="hint">Punctul 1 conține textual predicțiile din SportyTrader, PredictZ și Forebet (fără reformulare).</div>
-    </section>
-  </div>
+export const config = { runtime: "nodejs20.x" };
 
-  <script src="/script.js"></script>
-</body>
-</html>
+const openai = new OpenAI({ apiKey: process.env.OPENAI_API_KEY });
+
+// Set implicit: stil „GPT-5 Thinking (extins, argumentat)” – fundal negru, text alb, ✅⚠️📊🎯, fără caractere asiatice.
+const STYLE_INSTRUCTIONS = `
+- Răspuns pe fundal negru (text simplu ce va fi randat într-un container dark).
+- Folosește simboluri: ✅, ⚠️, 📊, 🎯 (fără a menționa cuvântul „Simbol”).
+- Structură fixă în 10 puncte, concis, fără caractere asiatice.
+- Română, ton profesionist, direct, asumat. Verdict clar.
+`;
+
+function buildPrompt({ home, away, when, sources }) {
+  const srcTxt = sources.map(s => {
+    if (!s.ok) return `• ${s.url} — EROARE: ${s.error}`;
+    const notes = s.notes && s.notes.length ? s.notes.map(n => `  - ${n}`).join("\n") : "  - (fără bloc util găsit)";
+    return `• ${s.source} (${s.url}) [${s.confidence}]\n${notes}`;
+  }).join("\n");
+
+  return `
+Ești un analist de pariuri profesionist. Meci: ${home} vs ${away}${when ? `, data: ${when}` : ""}.
+Ai voie să folosești doar fragmentele de PREDICȚII extrase mai jos (nu inventa, nu „citi” restul paginii).
+
+FRAGMENTE EXTRASE (țintit pe Pronostic/Pont/Prediction):
+${srcTxt}
+
+Cerințe:
+${STYLE_INSTRUCTIONS}
+
+Format obligatoriu în 10 puncte:
+1) ✅ Surse & consens (marchează consensul real; dacă diferă, explică scurt).
+2) 📊 Medie ponderată a predicțiilor (arătă tendința 1/X/2, Under/Over).
+3) 📊 Impact pe pronostic (forma, motivația, absențe – DOAR dacă reies din fragmente).
+4) 📊 Forma recentă (tendință din ce ai, fără a inventa).
+5) 📊 Absențe-cheie (NUMAI dacă apar în fragmente).
+6) 📊 Golgheteri / pattern goluri (NUMAI dacă apar în fragmente).
+7) 📊 Posesie, cornere, cartonașe, faulturi (NUMAI dacă apar în fragmente).
+8) 🎯 Predicție finală ajustată (3–5 pariuri clare).
+9) ⚠️ Riscuri & alternative (unde există divergențe între surse).
+10) ✅ Verdict final (ce aș juca eu, pe scurt).
+
+IMPORTANT:
+- Dacă o informație NU apare în fragmente, spune „Nu știu / Date insuficiente”.
+- Nu inventa cote, marcatori sau liste de indisponibilități.
+- Păstrează totul compact, „no fluff”.
+`;
+}
+
+export default async function handler(req, res) {
+  try {
+    if (req.method !== "POST") return res.status(405).json({ error: "Method not allowed" });
+
+    const { home = "", away = "", when = "", urls = [] } = await (async () => {
+      try { return await req.json?.() || await new Promise(r => {
+          let data = ""; req.on("data", c => data += c);
+          req.on("end", () => r(JSON.parse(data || "{}")));
+        });
+      } catch { return {}; }
+    })();
+
+    if (!process.env.OPENAI_API_KEY) {
+      return res.status(500).json({ error: "OPENAI_API_KEY lipsă în Vercel" });
+    }
+    if (!home || !away) {
+      return res.status(400).json({ error: "Parametri lipsă: 'home', 'away' sunt obligatorii" });
+    }
+
+    // Surse implicite dacă nu trimiți tu explicit
+    const defaultUrls = [
+      // Adaugă pagina de preview a meciului pe SportyTrader (RO/EN/FR – merge orice limbă)
+      // Exemplu: "https://www.sportytrader.com/en/betting-tips/..."
+    ];
+    const targetUrls = (Array.isArray(urls) && urls.length ? urls : defaultUrls).slice(0, 5);
+
+    // 1) colectăm fragmentele țintite (pronostic/pont/prediction)
+    const sources = await collectSources(targetUrls);
+
+    // 2) compunem promptul
+    const prompt = buildPrompt({ home, away, when, sources });
+
+    // 3) generăm răspunsul
+    const completion = await openai.chat.completions.create({
+      model: "gpt-4o-mini", // rapid și suficient pentru acest pas; poți schimba în gpt-4o
+      temperature: 0.2,
+      messages: [
+        { role: "system", content: "Ești un analist de pariuri profesionist, concis, onest, fără înflorituri." },
+        { role: "user", content: prompt }
+      ]
+    });
+
+    const text = completion.choices?.[0]?.message?.content?.trim() || "Nu am primit conținut.";
+    return res.status(200).json({
+      ok: true,
+      home, away, when,
+      usedUrls: targetUrls,
+      sources,
+      analysis: text
+    });
+  } catch (err) {
+    return res.status(500).json({ ok: false, error: String(err) });
+  }
+}
